# Arabic-Law-LLM-Assistance

./: Dockerfile  README.md  pyproject.toml
backend/: main.py  requirements.txt
frontend/: index.html  script.js  style.css
notebook/: Fine-tune-Qwen3-8B-Base-on-Arabic-Law-Dataset.ipynb
