[project]
name = "arabic-law-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.7",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "uvicorn>=0.35.0",
]
